fix domain price alignment

--- a/client/components/domains/domain-product-price/style.scss
+++ b/client/components/domains/domain-product-price/style.scss
@@ -12,7 +12,7 @@
 		font-size: $font-body;
 
 		.is-white-signup & {
-			align-items: flex-start;
+			align-items: flex-end;
 		}
 	}
 
